configuration setup complete in this commit

--- a/User_app/src/index.html
+++ b/User_app/src/index.html
@@ -18,7 +18,7 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-  <script src="https://maps.googleapis.com/maps/api/js?v=3&amp;key=YOUR_GOOGLE_MAP_KEY&amp;libraries=places"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?v=3&amp;key=AIzaSyB2Bk3QoqBMiEdLcSWPQsaal1yBWl5IHrM&amp;libraries=places"></script>
 </head>
 
 <body>
